# time-drift

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  docker-compose.yml
.github/workflows/: build.yml
docs/superpowers/plans/: 2026-04-23-time-drift-plan-part1.md  2026-04-23-time-drift-plan-part2.md
docs/superpowers/specs/: 2026-04-23-time-drift-design.md
migrations/: 20260423000000_initial.sql
src/: config.rs  db.rs  lib.rs  main.rs  models.rs
src/routes/: analytics.rs  dashboard.rs  day.rs  history.rs  mod.rs  month.rs
src/services/: charts.rs  mod.rs  time.rs
static/: style.css
templates/: analytics.html  base.html  dashboard.html  day_form.html  history.html  month.html
templates/partials/: saldo_badge.html  time_block_row.html
tests/: service_tests.rs
tools/: import_excel.py
